Update from curriculum repo

--- a/module-4/lesson-3/FD_Module_4_Lesson_3.ipynb
+++ b/module-4/lesson-3/FD_Module_4_Lesson_3.ipynb
@@ -260,7 +260,7 @@
     "    callsNflx = pd.read_csv(\"nflx_calls.csv\")\n",
     "\n",
     "callsNflx[\"Open Interest\"] = (\n",
-    "    callsNflx[\"Open Interest\"].str.replace(\"-\", \"0\").astype(float)\n",
+    "    callsNflx[\"Open Interest\"].astype(str).str.replace(\"-\", \"0\").astype(float)\n",
     ")\n",
     "list(callsNflx.columns)"
    ]
@@ -492,7 +492,7 @@
     "        putsNflx.loc[index, \"Volume\"] = 0\n",
     "\n",
     "putsNflx[\"Open Interest\"] = (\n",
-    "    putsNflx[\"Open Interest\"].str.replace(\"-\", \"0\").astype(float)\n",
+    "    putsNflx[\"Open Interest\"].astype(str).str.replace(\"-\", \"0\").astype(float)\n",
     ")\n",
     "numPutStrikes = putsNflx[\"Strike\"].count()\n",
     "numPutStrikes"
